<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>qSlicerSliceControllerModule</class>
 <widget class="qSlicerWidget" name="qSlicerSliceControllerModule">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>618</width>
    <height>792</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_3">
   <item>
    <widget class="ctkCollapsibleButton" name="CTKCollapsibleButton">
     <property name="text">
      <string>Slice Controllers</string>
     </property>
     <property name="contentsFrameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="qMRMLSliceControllerWidget" name="RedSliceControllerWidget"/>
      </item>
      <item>
       <widget class="qMRMLSliceControllerWidget" name="YellowSliceControllerWidget">
        <property name="sliceViewName">
         <string>Yellow</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="qMRMLSliceControllerWidget" name="GreenSliceControllerWidget">
        <property name="sliceViewName">
         <string>Green</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="ctkCollapsibleButton" name="CTKCollapsibleButton_2">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="text">
      <string>Slice Information</string>
     </property>
     <property name="collapsed">
      <bool>false</bool>
     </property>
     <property name="contentsFrameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <layout class="QFormLayout" name="formLayout_2">
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Slice Node:</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="qMRMLNodeComboBox" name="MRMLSliceNodeComboBox">
          <property name="enabled">
           <bool>true</bool>
          </property>
          <property name="toolTip">
           <string>Select a slice from the current scene</string>
          </property>
          <property name="nodeTypes">
           <stringlist>
            <string>vtkMRMLSliceNode</string>
           </stringlist>
          </property>
          <property name="showHidden">
           <bool>true</bool>
          </property>
          <property name="addEnabled">
           <bool>false</bool>
          </property>
          <property name="removeEnabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <widget class="qMRMLSliceInformationWidget" name="MRMLSliceInformationWidget"/>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>226</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ctkCollapsibleButton</class>
   <extends>QWidget</extends>
   <header>ctkCollapsibleButton.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qMRMLNodeComboBox</class>
   <extends>QWidget</extends>
   <header>qMRMLNodeComboBox.h</header>
  </customwidget>
  <customwidget>
   <class>qMRMLSliceControllerWidget</class>
   <extends>qMRMLWidget</extends>
   <header>qMRMLSliceControllerWidget.h</header>
  </customwidget>
  <customwidget>
   <class>qMRMLSliceInformationWidget</class>
   <extends>qMRMLWidget</extends>
   <header>qMRMLSliceInformationWidget.h</header>
  </customwidget>
  <customwidget>
   <class>qMRMLWidget</class>
   <extends>QWidget</extends>
   <header>qMRMLWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qSlicerWidget</class>
   <extends>QWidget</extends>
   <header>qSlicerWidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>qSlicerSliceControllerModule</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>MRMLSliceNodeComboBox</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>613</x>
     <y>317</y>
    </hint>
    <hint type="destinationlabel">
     <x>559</x>
     <y>468</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerSliceControllerModule</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>RedSliceControllerWidget</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>68</x>
     <y>5</y>
    </hint>
    <hint type="destinationlabel">
     <x>88</x>
     <y>61</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerSliceControllerModule</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>YellowSliceControllerWidget</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>135</x>
     <y>5</y>
    </hint>
    <hint type="destinationlabel">
     <x>176</x>
     <y>183</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerSliceControllerModule</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>GreenSliceControllerWidget</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>293</x>
     <y>3</y>
    </hint>
    <hint type="destinationlabel">
     <x>304</x>
     <y>285</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerSliceControllerModule</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>MRMLSliceInformationWidget</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>308</x>
     <y>401</y>
    </hint>
    <hint type="destinationlabel">
     <x>308</x>
     <y>621</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>MRMLSliceNodeComboBox</sender>
   <signal>currentNodeChanged(vtkMRMLNode*)</signal>
   <receiver>MRMLSliceInformationWidget</receiver>
   <slot>setMRMLSliceNode(vtkMRMLNode*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>143</x>
     <y>456</y>
    </hint>
    <hint type="destinationlabel">
     <x>130</x>
     <y>489</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
